<resources>
    <string name="app_name">MAD-PROJECT</string>

    //login
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOG-IN</string>
    <string name="createAccount">CREATE ACCOUNT</string>

    //feedback
    <string name="feed">WRITE YOUR FEEDBACK</string>
    <string name="rating">ratings</string>
    <string name="email">E-MAIL</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="submit">SUBMIT</string>

    //signin
    <string name="signin">SIGN-IN</string>
    <string name="home">HOME</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE ACCOUNT</string>

    //user profile

    <string name="title">USER PROFILE</string>
    <string name="changepropic">CHANGE PROFILE PICTURE</string>
    <string name="deleteAccount">DELETE ACCOUNT</string>

    //Home

    <string name="topic">HOME TOPIC</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="dropdowntoselect">CATEGORIES</string>

    //Cakeology cakes

    <string name="quantity">ADD QUANTITY</string>
    <string name="buybutton">BUY NOW</string>
    <string name="addtocartbutton">Add to Cart Now</string>

    //Add Items

    <string name="myadminpage1">ADD ITEMS</string>
    <string name="addbutton">Add Cake</string>
    <string name="backbutton">My Profile</string>
    <string name="forwardbutton">FEEDBACK</string>

    //Add Details

    <string name="myadminpage2">Add Cake Details</string>
    <string name="savebutton">SAVE DETAILS</string>
    <string name="view">VIEW</string>
    <string name="myfeed">MY FEED</string>
    <string name="mymail">MY MAIL</string>
    <string name="myrating">MY RATINGS</string>
    <string name="myfeedback">MY FEEDBACK</string>
    <string name="ratings">Ratings</string>
    <string name="cartButton">Add To Cart</string>
    <string name="buyButton">Buy Now</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_greeting">Add icing greeting to this cake (Rs.100)</string>
    <string name="hint_candles">Add number candles</string>
    <string name="updateButton">Update</string>
    <string name="showButton">Show</string>
    <string name="updButton">Update</string>
    <string name="updB">Update</string>
    <string name="hintForCandles">Add  number candles</string>
    <string name="addCandles">Add number candles (Rs.100)</string>

    //home page

    <string-array name="cake_list">
        <item>Special Fondant Cake</item>
        <item>Fancy Sugar Cup Cakes</item>
        <item>Raspberry-Puree Sponge Cake</item>
        <item>Chocolate Strawberry Rum Sponge</item>
        <item>Rainbow Ribbon Cake</item>
        <item>Unicorn Cup Cakes</item>
        <item>Butterscotch Cake</item>
        <item>Anniversary Red Velvet Cake</item>

    </string-array>

    <string-array name="description">
        <item>Spread the love with decadent buttercream filling and is frosted with fondant icing for a perfect, smooth look. Black polka twist around the base of the cake and pop out of the top.</item>
        <item>Moist vanilla cupcakes topped with a strawberry and cream cheese frosting. (12 pcs)</item>
        <item>This stunning Raspberry Rose Cake features layers of soft vanilla sponge cake filled with delicious raspberry puree and butter cream that melts in your mouth.</item>
        <item>Chocolate sponge cake sandwiched with Praline Cream, Rum, Strawberry Pulp and coated with Chocolate Ganache.</item>
        <item>Indulge your sweet temptations with our very own Rainbow Ribbon Signature Cake.</item>
        <item>Celebrate it with unicorn! Our moist chocolate and vanilla cupcakes topped with unicorn. (12 pcs)</item>
        <item>This flavourful cake comes with tempting layers of cream and topped with salted butterscotch.</item>
        <item>One of the best pick for a wedding, engagement, or anniversary celebrations! This heart-shaped ribbon cake looks so elegant at the same time it will fill up your heart with the taste!</item>

    </string-array>

    <string-array name="price_list">
        <item>Rs.3,750</item>
        <item>Rs.1,250</item>
        <item>Rs.2,850</item>
        <item>Rs.3,000</item>
        <item>Rs.2,500</item>
        <item>Rs.1,500</item>
        <item>Rs.2,000</item>
        <item>Rs.3,200</item>


    </string-array>

    <string-array name="weight_list">
        <item>3kg</item>
        <item>500g</item>
        <item>3.2kg</item>
        <item>2.5kg</item>
        <item>1.5kg</item>
        <item>500g</item>
        <item>2kg</item>
        <item>2.8kg</item>
    </string-array>


</resources>